--- a/AdjustedMechAssembly/settings.json
+++ b/AdjustedMechAssembly/settings.json
@@ -34,6 +34,7 @@
 		"mechdef_spider_SDR-AS",
 		"mechdef_EXPA",
 		"mechdef_shadowhawk_SHD-SX",
-		"mechdef_atlas_AS-GSZ"
+		"mechdef_atlas_AS-GSZ",
+		"mechdef_marauder_MAD-S7"
 		]
 }
