--- a/InnerSphereMap/settings.json
+++ b/InnerSphereMap/settings.json
@@ -12,5 +12,13 @@
 	"MarikRGB" : [0.782, 0.574, 1.000],
 	"TaurianRGB" : [0.346, 0.621, 1.000],
 	"MagistracyRGB" : [0.271, 1.000, 0.941],
-	"RestorationRGB" : [0.750, 0.160, 0.160]
+	"RestorationRGB" : [0.750, 0.160, 0.160],
+	"MinFov" : 15.0,
+	"MaxFov" : 100.0,
+	"MapWidth" : 200.0,
+	"MapHeight" : 200.0,
+	"MapTopViewBuffer" : 25.0,
+	"MapLeftViewBuffer" : 25.0,
+	"MapRightViewBuffer" : 25.0,
+	"MapBottomViewBuffer" : 75.0
 }
