--- a/AIM/settings.json
+++ b/AIM/settings.json
@@ -23,7 +23,7 @@
 
   /* Show tonnage in selection panel (bottom left) and target panel (top).  Mech class will be shortened.  Default false because it's too dense. */
 
-  "ShowUnitTonnage": false,
+  "ShowUnitTonnage": true,
 
   /* Show heat and stability number in selection panel (bottom left) and target panel (top).  Default true. */
 
@@ -36,7 +36,7 @@
   /* Show ammo count in the list of components when you mouseover the paper doll.  Default true for friends. */
 
   "ShowAmmoInTooltip": true,
-  "ShowEnemyAmmoInTooltip": false,
+  "ShowEnemyAmmoInTooltip": true,
 
   //
   // Line of Sight
@@ -129,7 +129,7 @@
   //
 
   /* Specify set of hit modifiers of ranged attacks. Leave empty to keep it unchanged.  Order and letter case does not matter.
-   * Default "ArmMounted, Direction, Height, Indirect, Inspired, LocationDamage, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage".
+   * Default "ArmMounted, Direction, Height, Indirect, Inspired, LocationDamage, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, SensorLock, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage".
    * You can remove some options or replace SelfTerrain and TargetTerrain with SelfTerrainMelee and TargetTerrainMelee. */
 
   "RangedAccuracyFactors": "ArmMounted, Direction, Height, Indirect, Inspired, Obstruction, Precision, Range, Refire, SelfHeat, SelfStoodUp, SelfTerrain, SensorImpaired, Sprint, TargetEffect, TargetEvasion, TargetProne, TargetShutdown, TargetSize, TargetTerrain, Walked, WeaponAccuracy, WeaponDamage",
